--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@farcaster/miniapp-sdk": "latest",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.477.0",
     "next": "14.2.14",
     "react": "18.3.1",
     "react-dom": "18.3.1",
